force-app/main/default/objects/Supplier__c/Supplier__c.object-meta.xml
<CustomObject>
    <description>An entity that supplies plant commodities.</description>
    <label>Supplier</label>
    <nameField>
        <label>Supplier Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Suppliers</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>