force-app/main/default/objects/Supplier__c/fields/ShippingMethod__c.field-meta.xml
<CustomField>
    <fullName>ShippingMethod__c</fullName>
    <label>ShippingMethod</label>
    <length>255</length>
    <type>Text</type>
</CustomField>