force-app/main/default/objects/Supplier__c/fields/SupplierEmail__c.field-meta.xml
<CustomField>
    <fullName>SupplierEmail__c</fullName>
    <label>SupplierEmail</label>
    <type>Email</type>
</CustomField>