force-app/main/default/objects/Supplier__c/fields/SupplierPhone__c.field-meta.xml
<CustomField>
    <fullName>SupplierPhone__c</fullName>
    <label>SupplierPhone</label>
    <type>Phone</type>
</CustomField>