force-app/main/default/objects/Supplier__c/fields/Supply_List__c.field-meta.xml
<CustomField>
    <fullName>Supply_List__c</fullName>
    <label>Supply List</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Plant_Types</valueSetName>
    </valueSet>
</CustomField>