force-app/main/default/objects/Supplier__c/validationRules/website_Format_Rules.validationRule-meta.xml
<ValidationRule>
    <fullName>website_Format_Rules</fullName>
    <active>true</active>
    <errorConditionFormula>REGEX(WebSite__c ,&quot;^(https://[A-Za-z]+\\.)([A-Za-z0-9])+\\.(com|net|org)$&quot;)</errorConditionFormula>
    <errorMessage>The input does not match a website pattern!</errorMessage>
</ValidationRule>